@@ -16,3 +16,5 @@ Fixed: Added a check to verify the user type before logging in.
 
 
 Added functionality for faculty to award score.
+
+Added functionality for students to check their score.
